--- a/main.html
+++ b/main.html
@@ -4,13 +4,48 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+<style>
+    /* Additional styles for full-width button */
+    .full-width-btn {
+      width: 100%;
+    }
+  </style>
+
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<h2>Bootstrap Buttons</h2>
+	<body>
 
+<!-- Primary button -->
+<button id="button-1" class="btn btn-primary">Primary Button</button>
+
+<!-- Outline secondary button -->
+<button id="button-2" class="btn btn-outline-secondary">Outline Secondary Button</button>
+
+<!-- Success large button -->
+<button id="button-3" class="btn btn-success btn-lg">Success Large Button</button>
+
+<!-- Danger small button -->
+<button id="button-4" class="btn btn-danger btn-sm">Danger Small Button</button>
+
+<!-- Warning large full-screen width button -->
+<button id="button-5" class="btn btn-warning btn-lg full-width-btn">Warning Large Full-width Button</button>
+
+<!-- Disabled info button -->
+<button id="button-6" class="btn btn-info" disabled>Disabled Info Button</button>
+
+<!-- Light button -->
+<button id="button-7" class="btn btn-light">Light Button</button>
+
+<!-- Link button -->
+<button id="button-8" class="btn btn-link">Link Button</button>
+
+<!-- Bootstrap JS and dependencies -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-
 </html>
